Fix speakers alignment on mobile

--- a/_sass/components/schedule.scss
+++ b/_sass/components/schedule.scss
@@ -76,7 +76,10 @@
       .talk_info {
         flex-grow: 1;
       }
-      .speakers { max-width: 370px; }
+      .speakers {
+        justify-content: left;
+        max-width: 370px;
+      }
       .speaker { min-width: 370px; margin: 0px; padding: 0px; }
     }
   }
